--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,5 +64,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    {% block super_extra_js %}{% endblock %}
 </body>
 </html> 
