--- a/app/templates/teacher/base_dashboard.html
+++ b/app/templates/teacher/base_dashboard.html
@@ -106,6 +106,11 @@ main {
 </style>
 {% endblock %}
 
-{% block extra_js %}
 <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
-{% endblock %} 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/main.js"></script>
+
+{% block super_extra_js %}
+<!-- TEST: super_extra_js block in base_dashboard.html -->
+{% endblock %}
+</body> 
