--- a/app/templates/teacher/base_dashboard.html
+++ b/app/templates/teacher/base_dashboard.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<body>
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
@@ -69,6 +70,8 @@
         </main>
     </div>
 </div>
+{% block extra_js %}{% endblock %}
+</body>
 {% endblock %}
 
 {% block extra_css %}
@@ -108,9 +111,4 @@ main {
 
 <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/static/js/main.js"></script>
-
-{% block super_extra_js %}
-<!-- TEST: super_extra_js block in base_dashboard.html -->
-{% endblock %}
-</body> 
+<script src="/static/js/main.js"></script> 
