--- a/app/templates/teacher/clans.html
+++ b/app/templates/teacher/clans.html
@@ -1,10 +1,93 @@
 {% extends "teacher/base_dashboard.html" %}
+
 {% block breadcrumb %}
 <li class="breadcrumb-item active" aria-current="page">Clans</li>
 {% endblock %}
+
 {% block dashboard_content %}
-<div class="alert alert-info mt-4">
-  <h4 class="alert-heading">Clans</h4>
-  <p>This feature is coming soon.</p>
+<div class="container-fluid mt-4">
+  <div id="clan-error" class="alert alert-danger d-none"></div>
+  <div id="clan-success" class="alert alert-success d-none"></div>
+  <div class="row mb-3">
+    <div class="col-md-4">
+      <label for="class-select" class="form-label">Select Class</label>
+      <select id="class-select" class="form-select"></select>
+    </div>
+    <div class="col-md-8 text-end">
+      <button class="btn btn-primary" id="add-clan-btn"><i class="fas fa-plus"></i> Add Clan</button>
+    </div>
+  </div>
+  <div id="clan-spinner" class="text-center my-4 d-none">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <h5>Student Roster</h5>
+      <ul id="student-roster" class="list-group min-vh-50" style="min-height: 300px;"></ul>
+    </div>
+    <div class="col-md-9">
+      <div class="row" id="clan-columns">
+        <!-- Clan columns will be dynamically inserted here -->
+      </div>
+    </div>
+  </div>
 </div>
+
+<!-- Clan Form Modal -->
+<div class="modal fade" id="clanFormModal" tabindex="-1" aria-labelledby="clanFormModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="clan-form">
+        <div class="modal-header">
+          <h5 class="modal-title" id="clanFormModalLabel">Create/Edit Clan</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="clan-id" />
+          <div class="mb-3">
+            <label for="clan-name" class="form-label">Clan Name</label>
+            <input type="text" class="form-control" id="clan-name" required />
+          </div>
+          <div class="mb-3">
+            <label for="clan-description" class="form-label">Description</label>
+            <textarea class="form-control" id="clan-description"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="clan-emblem" class="form-label">Emblem URL</label>
+            <input type="text" class="form-control" id="clan-emblem" />
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-primary">Save</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteClanModal" tabindex="-1" aria-labelledby="deleteClanModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteClanModalLabel">Delete Clan</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this clan?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" id="confirm-delete-clan-btn">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+{% block extra_js %}
+  <script src="/static/js/clans.js"></script>
 {% endblock %} 
